MinIO/minio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  type: LoadBalancer
  ports:
  #- name: api
  #  port: 80
  #  nodePort: 9000
  #  protocol: TCP
  - name: console
    port: 80
    targetPort: 9000
    protocol: TCP
  selector:
    app: minio
